# ppshuai_generic_service

./: README.md
src/generic_service/: CMakeLists.txt  README
src/generic_service/huobitrade/: CMakeLists.txt  huobi_signature.h  main.cpp  service_modules.h
src/generic_service/utils/: base64.h  curl_helper.h  file_helper.h  json_helper.h  macros.h  string_helper.h  utils.h
src/generic_service/uvsocket/: CMakeLists.txt  uvsocket.cpp
src/generic_service/uws/: CMakeLists.txt  uws.cpp  uws.h
src/generic_service/uws/future/: index.html  interface.h  service.h
src/generic_service/uws/github/: index.html  interface.h  service.h
src/generic_service/uws/helpers/: AsyncFileReader.h  AsyncFileStreamer.h
